Latest prelim report

--- a/reports/prelim/latex/1-introduction.tex
+++ b/reports/prelim/latex/1-introduction.tex
@@ -1,28 +1,20 @@
 \chapter{Introduction}\label{C:intro}
 
-\par As software is now ubiquitous across industry and it is impossible not to have a presence in the tech sphere. Consequently, software security has become so significant, programmers have to ensure that the security processes that they implement are resilient to any attacks. Lack of attack prevention can cause leakage of sensitive information, massive economic damage and danger to massive numbers of users and employees, consequently opening business, clients and end-users to exploitation by external bodies. Unfortunately, every day, we hear of organisations that have been compromised \cite{1}.
+\par As software is now ubiquitous across industry and it is impossible not to have a presence in the tech sphere. Consequently, software security has become so significant, programmers have to ensure that the security processes that they implement are resilient to any attacks. Lack of attack prevention can cause leakage of sensitive information, massive economic damage and danger to massive numbers of users and employees, consequently opening business, clients and end-users to exploitation by external bodies. Unfortunately, every day, we hear of organisations that have been compromised \cite{1}. Last year New Zealand experienced a significant security breach within the Tū Ora Compass Health (Tū Ora) Primary Health Organisation (PHO) \cite{incident}. Tū Ora is one of the largest PHO's in the country and it governs the greater Wellington region \cite{incident}. Personal information of up to one million New Zealander's was exposed and the effects of this are ongoing \cite{incident}. Ccosts have been great in attempts to mitigate any effects to the public. Dedicated call centres have had to be organised as well as dedicated mental health lines \cite{healthpol, incident}. Regular updates have had to be released in order to maintain communication transparency and assurance quality measures are ongoing \cite{healthpol, incident}.  
 \newline
-\par This project will investigate how software developers implement and adopt security practices in the work they do in order to develop an understanding of what influences and impact decisions surrounding their technical work. This project will be conducted using grounded theory. Grounded theory is a method which aims to establish a theory when there is none \cite{2}, and it is a commonly used method for data analysis. Interviews will take place to collect the data, from which the answers will be analysed to draw conclusions on standard security practices in the professional workplace.
-
-\section{Problem}
-
-\par Qualitative research is often neglected and overlooked in favour of more quantitative reasoning and technical traits such as the security method used or the programmers task-completion rate \cite{3}. Programmers provide a human aspect to a technical solution and therefore, there should be a shift towards understanding the more background ‘soft’ processes that occur when making decisions; why are the choices made based on past influences, and how they affect the programmers work in the present?
+\par Qualitative research is often neglected and overlooked in favour of more quantitative reasoning and technical traits such as the security method used or the programmers task-completion rate \cite{3}. Programmers provide a human aspect to a technical solution and therefore, there should be a shift towards understanding the more background ‘soft’ processes that occur when making decisions; why are the choices made based on past influences, and how they affect the programmers work in the present? 
 \newline
-\par Past the research aspect, when security and privacy issues do occur in real-world scenarios, developers are blamed first as it is their projects that have allowed the vulnerabilities to be exploited \cite{4}. While developers do make mistakes, they also do need the support to make better security decisions, and this support is currently lacking in the industry \cite{4}. Education is limited past initial acceptance within organisations, and often developers have a blasé attitude to the matter expecting another team to fix the issue \cite{5}. Furthermore, security mechanisms often have an increased complexity as well, which make them difficult to understand to then use \cite{6}l.
+\par Past the research aspect, when security and privacy issues do occur in real-world scenarios, developers are blamed first as it is their projects that have allowed the vulnerabilities to be exploited \cite{4}. While developers do make mistakes, they also do need the support to make better security decisions, and this support is currently lacking in the industry \cite{4}. Education is limited past initial acceptance within organisations, and often developers have a blasé attitude to the matter expecting another team to fix the issue \cite{5}. Furthermore, security mechanisms often have an increased complexity, which make them difficult to understand and to then use \cite{6}.
 \newline
-\par Exploring this topic is essential as it allows for a more comprehensive understanding of how and why programmers think the way they do, and of the human and social aspects of Software Engineering \cite{geeks}. We want to understand what solutions developers are using to implement in their security practices, if at all. The findings from this can support developers in terms of education and the better design of security methods in programming \cite{summary1} that have an emphasis on usability.
-
-\section{Solution}
-
+\par This project will investigate how software developers implement and adopt security practices in the work they do in order to develop an understanding of what influences and impact decisions surrounding their technical work. This project will be conducted using grounded theory which is a theory is a method which aims to establish a theory when there is none \cite{2}, and it is a commonly used method for data analysis. Interviews will take place to collect the data, from which the answers will be analysed to draw conclusions on standard security practices in the professional workplace. This project builds upon works by Hala Assal, Charles Weir and Nathan Newton \cite{summary1, 1, nathan}. 
+\newline
 \par This project aims to implement a theory as to why programmers implement and adopt security practices in the work they do by interviewing professional developers and using the Grounded Theory Method to analyse the outcomes. Grounded theory is a research method to analyse qualitative data. There are several thorough steps which include; sampling, data collection, data analysis, theoretical note writing, identifying core categories, forming theoretical outlines and presenting a theory.
 \newline
-\par The findings of this project can be used to identify what security methods developers find as beneficial in their programming. This will allow programmers to complete their work to a high standard, by adhering to proper security protocols, thus overall making their work of a higher value both in a secure and professional sense.
+\par Participants will be recruited by posting on tech-related groups (i.e. From OWASP Meetup Group and LinkedIn) and mailing lists and also using mine and my supervisor contacts. At this point, I can then start semi-structured interviews with 10-20 interested individuals on their security practices while programming. These people will all be developers in New Zealand that are in varying stages of their careers and career paths to allow for a broader range of responses and a case study relevant to New Zealand. Examples of appropriate job titles include; DevOps engineer, front-end security developer, database administrator, developer, programmer and security architect.
 \newline
-\par The project will be an informative investigation on understanding the decisions programmers make, therefore obtaining data from actual programmers as soon as possible is essential for the smooth running of this project; human ethics approval will be needed quickly.
+\par This project will lead to a new, more in-depth understanding of the psychology of the decisions made by programmers. The research done by this project could lead to future qualitative research to be done on another under-developed topic on why programmers do what they do. Paired with this research, that future one could help build a profile of a programmer and their thought processes. Data collected could also be the foundation that allows a developer to build tools that helps other developers implement proper security practices; a Grammarly for security. It can also help the further development of existing static analysis tools such as Infer developed by Facebook, Tricorder used by Google, Coverity and Raygun \cite{infer, tri, coverity, raygun}. These tools all work by providing security detection modules and are used for quality assurance and security. 
 \newline
-\par After the human ethics application is approved, participants will be recruited by posting on tech- related groups (i.e. From Meetups and Linkedin) and mailing lists and also using mine and my supervisor contacts. At this point, I can then start semi-structured interviews with 10-20 interested individuals on their security practices while programming. These people will all be developers in New Zealand that are in varying stages of their careers and career paths to allow for a broader range of responses and a case study relevant to New Zealand. Examples of appropriate job titles include; DevOps engineer, front-end security developer, database administrator and security architect.
-\newline
-\par This project will lead to a new, more in-depth understanding of the psychology of the decisions made by programmers. The research done by this project could lead to future qualitative research to be done on another under-developed topic on why programmers do what they do. Paired with this research, that future one could help build a profile of a programmer and their thought processes. Data collected could also be the foundation that allows a developer to build a tool that helps other developers implement proper security practices; a Grammarly for security.
+\par Exploring this topic is essential as it allows for a more comprehensive understanding of how and why programmers think the way they do, and of the human and social aspects of Software Engineering \cite{geeks}. We want to understand what solutions developers are using to implement in their security practices, if at all. The findings from this can support developers in terms of education and the better design of security methods in programming \cite{summary1} that have an emphasis on usability. The findings of this project can also be used to identify what security methods developers find as beneficial in their programming. This will allow programmers to complete their work to a high standard, by adhering to proper security protocols, thus overall making their work of a higher value both in a secure and professional sense.
 
 \section{Deviations from the Original Plan}
 There have been no deviations from the original plan.
