--- a/reports/prelim/latex/2-background.tex
+++ b/reports/prelim/latex/2-background.tex
@@ -1,21 +1,23 @@
 \chapter{Background}\label{C:Background}
 
-\par Conceptually, this project aims to gather data in order to ultimately form a theory. Therefore, It is essential that I know enough information about the topic of security so that I am able to interview professional engineers in a manner which is knowledgeable. This chapter will include background on the importance of information security practices, what practices are widely used, summaries on existing research on similar subject matter, and a discussion on the chosen methodology.  
+\par Conceptually, this project aims to gather data in order to ultimately form a theory on the influences of security practices in New Zealand. Therefore, It is essential that I know enough information about the topic of security so that I am able to interview professional engineers in a manner which is knowledgeable. This chapter will include background on the importance of information security practices, what practices are widely used, summaries on existing research on similar subject matter, and a discussion on the chosen methodology.  
 
 \section{Research Methodology}
 
 Grounded theory (GT) is the chosen methodology for this study. It was an appropriate choice as the study focuses on human aspects and GT is appropriate to study these as it is way of analysing qualitative data with the end-goal of defining a new theory from the sampled data \cite{geeks}. There are several procedures in the GT  methodology in order to make the final theory.  The theory is expected to be explanatory, focusing on describing elements of the findings rather than stating. It should also be based on the collected responses and observations, rather than pre-conceived ideas. Avoidance of an extensive literature review should occur accordingly.
 \newline
 \par Initially, researchers must choose a topic and research whether the Grounded Theory method is the right one for the research project \cite{geeks}. After contacting sample groups the iterative process of data collection occurs. Questions adapt between collection as analysis of the previous answers occurs. This refinement of questions happens to delve deeper into the traits of the emerging theory. When saturation is achieved, no more new findings are displayed which contribute to the final theory. This results in the “grounded” nature of the overall theory.
+\newline
+\par Similar projects at the university have been conducted using this methodology. Siva Dorairaj's, "The Theory of One Team: Agile Software Development with Distributed Teams"; Rashina Hoda's, "Self-Organising Agile Teams: A Grounded Theory"; Brendan Julian's, "Agile Practices: A Theory of Agile Adoption and Evolution"; Nathan Newton's, "Information Security in Agile Software Development: A Critical Success Factor Perspective"; and Aaron Pangs, "What Programming Languages Do Developers Use? A Theory of Static vs Dynamic Language Choice" \cite{alumni}.
 
 \section{Information Security in New Zealand}
 
 Information security is defined by three objectives; confidentiality, integrity and availability, most commonly referred to as the CIA triad. Confidentiality is the act of keeping information private to protect information, Integrity is the act of maintaining information validity and Availability is the act of ensuring reliable access to information.  Any breach of those principles can result in significant negative impacts economically, and to personal emotional and physical well-being. 
 \newline
-\par A study run by Aura Security showed \cite{aura} showed a 10\% increase in cyber-attacks on New Zealand businesses between the years of 2018-2019. In NZ the rise is attributed to the digitisation of day-to-day way-of-life; as new technologies are continuously developed there is an urgency to deploy products. There is a lot of pressure on programmers to finalise these products and the deviation of attention to the finished output means that there are many new threats to security \cite{securitystrat}. Malicious attackers are also becoming more sophisticated. Individual threat attackers now seem to have the same knowledge and resources as nation-backed actors \cite{securitystrat}.
+\par A study run by Aura Security showed showed a 10\% increase in cyber-attacks on New Zealand businesses between the years of 2018-2019 \cite{aura}. In NZ the rise is attributed to the digitisation of day-to-day way-of-life; as new technologies are continuously developed there is an urgency to deploy products. There is a lot of pressure on programmers to finalise these products and the deviation of attention to the finished output means that there are many new threats to security \cite{securitystrat}. Malicious attackers are also becoming more sophisticated. Individual threat attackers now seem to have the same knowledge and resources as nation-backed actors \cite{securitystrat}.
 \newline
 \newline
-Areas of improvement identified by the government are \cite{securitystrat}:
+Areas of improvement identified by the New Zealand government are \cite{securitystrat}:
 
 \begin{enumerate}
     \item \textbf{Cyber security aware and active citizens:} Increased regular awareness campaigns and education opportunities for the public in regards to best personal security practices. 
@@ -25,7 +27,7 @@ Areas of improvement identified by the government are \cite{securitystrat}:
     \item \textbf{Proactively tackle cybercrime:} Increasing support to impacted parties,  preventing and encouraging reporting of any cybercrimes. 
 \end{enumerate}
 
-\par These five principles are planned to continue to improve upon till 2023 \cite{securitystrat}. It is expected that aspects of these will influence the security practices that programmers use in industry. 
+\par These five principles are planned to continue to improve upon till 2023 \cite{securitystrat}. It is expected that aspects of these will influence the security practices that programmers use in NZ industry.
 
 \section{Secure Programming Practices}
 
@@ -78,7 +80,31 @@ The results outlined the following common groups:
 
 \par From these common groups the overarching theme displayed was that the developers were not purposefully ignorant to maintaining security practices, the majority were proactive and willing to learn. However, it was the importance of functionality and lack of ongoing support from organisations which made working towards a more secure software challenging. 
 \newline
-\par This paper was valuable to read as there are strong similarities between the research topic developed in this and the subject of the 489 topic. The methodologies are different, however, the findings of this display a programmers personal perspective rather than a theorised view. It is a direct comparison to our project, and we can further outline questions directed to the future work stated in the article's conclusion; “to explore potential relationships between motivations, deterrents and strategies for software security” and “investigate security procedures and attitudes in companies that have experienced security breaches and compare it to others who have not”.
+\par This paper was valuable to read as there are strong similarities between the research topic developed in this and the subject of the 489 topic. The methodologies are different, however, the findings of this display a programmers personal perspective rather than a theorised view. It is a direct comparison to our project, and we can further outline questions directed to the future work stated in the article's conclusion; “to explore potential relationships between motivations, deterrents and strategies for software security” and “investigate security procedures and attitudes in companies that have experienced security breaches and compare it to others who have not”. 
+\newline
+\par Similar questions from the survey can be used for the interview process in this study. Important questions identified are:
+
+\begin{itemize}
+\item How does security fit in the development life-cycle in real life? 
+\item What are the current motivators and deterrents to developers paying attention to security? 
+\end{itemize}
+
+The differences can be easier understood in the table below:
+\newline
+\begin{table}[htb]
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{This Research}}              & \multicolumn{1}{c|}{\textbf{Assal and Chiasson's Research}} \\ \hline
+Interview                 & Survey                 \\ \hline
+Any type of programmer involved with security practices  & Software Developers                                        \\ \hline
+New Zealand based         & North American based   \\ \hline
+Confidential Participants & Anonymous Participants \\ \hline
+Results based on overall analysis of participant answers & Results based only on participant answers                  \\ \hline
+Security                  & Security \\ \hline
+\end{tabular}
+\end{table}
+
+
 \newpage
 \subsection{“Software Development Practices in New Zealand” – Kirk and Tempero}
 
@@ -91,13 +117,31 @@ The key findings of this study were:
 \item Organisations and individuals \textbf{do not follow} standard agile process models.
 \item New Zealand is generally more \textbf{implementation-focused} in software development. There is an emphasis on this over other aspects of the software development life-cycle such as security and testing. 
 \item Decision-making is a \textbf{collaborative effort} with individuals involved in different stages and traits of the development life-cycle. 
-\item While most New Zealanders state they are “agile” this is not supported as frequent contact with clients and stakeholders is not upheld. However, there is a \textbf{highly iterative aspect} to the work individuals do on projects which does maintain agile principles. 
+\item While most New Zealander's state they are “agile” this is not supported as frequent contact with clients and stakeholders is not upheld. However, there is a \textbf{highly iterative aspect} to the work individuals do on projects which does maintain agile principles. 
 \item There is a \textbf{weakness in requirements gathering} which results in a widely noticed lack of clarity on scope details. 
 \item A tie in to point 2, notices a severe \textbf{lack of code quality} whether this be in design, reviewing and testing stages, or with general coding best practices. 
 \item Most \textbf{do not develop around }tools such as libraries, rather they use them as a support. This can be derived as not being “best-practice” and can be more time consuming. 
 \end{enumerate}
 
+\par Not much was asked specific to security, but finding number 6 links to poor practices around secure programming. 
+\newline
 \par The report had a limitation in which it did not make any recommendations at this stage, but it did mention that these findings can be used by organisations to obtain a view of the software practices in New Zealand. From here the organisations can make their own decisions on what to focus on to better their specific operations.  
 \newline
 \par Comparing to the described ENGR489 project, the methodology is different, and while the topics too are differing, they are similar enough to make interesting comparisons between the two. Kirk and Tempero focus on software development practices, while this project will research security practices. A comparison that can be made could be between the findings, as much like the prior related work, the findings are that of personal perspective of the participants rather than an objective view which Grounded Theory supplies.
+\newline
+\par The differences are outlined in the table below:
+\newline
+\newline
+\begin{table}[htb]
+\begin{tabular}{|l|l|}
+\hline
+\multicolumn{1}{|c|}{\textbf{This Research}}             & \multicolumn{1}{c|}{\textbf{Kirk and Tempero's Research}} \\ \hline
+Interview                 & Survey                  \\ \hline
+Any type of programmer involved with security practices  & Those involved with developing software             \\ \hline
+New Zealand based         & New Zealand based       \\ \hline
+Confidential Participants & Anonymous Participants  \\ \hline
+Results based on overall analysis of participant answers & Results based only on participant answers                 \\ \hline
+Security                  & Software Best Practices \\ \hline
+\end{tabular}
+\end{table}
 
