--- a/reports/prelim/latex/6-references.bib
+++ b/reports/prelim/latex/6-references.bib
@@ -12,13 +12,15 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/spe.2774},
 year = {2020}
 }
 
-@thesis{2,
-title = {Agile Practices: A Theory of Agile
-Adoption and Evolution},
-type={Bachelor's Thesis},
-school   = {Victoria University of Wellington School of Engineering and Computer Science},
-author = {Julian, Brendan},
-year = {2018}
+@article{2,
+author = {Julian, Brendan and Noble, James and Anslow, Craig},
+year = {2019},
+month = {04},
+pages = {3-18},
+title = {Agile Practices in Practice: Towards a Theory of Agile Adoption and Process Evolution},
+volume = {},
+isbn = {978-3-030-19033-0},
+doi = {10.1007/978-3-030-19034-7_1}
 }
 
 @article{3,
@@ -64,13 +66,12 @@ ISBN = {9780596008277}
 }
 
 @inproceedings{geeks,
-author = {Hoda, Rashina and Noble, James and Marshall, Stuart},
+doi = {10.1145/2578903.2579162},
+url = {https://doi.org/10.1145/2578903.2579162},
 year = {2011},
-month = {06},
-pages = {},
-title = {Grounded Theory for Geeks},
-journal = {ACM International Conference Proceeding Series},
-doi = {10.1145/2578903.2579162}
+author = {Hoda, Rashina and Noble, James and Marshall, Stuart},
+title = {{\textquotesingle}Grounded Theory for Geeks{\textquotesingle}},
+booktitle = {ACM International Conference Proceeding Series},
 }
 
 @inproceedings{summary1,
@@ -93,12 +94,14 @@ number={},
 pages={386-395},}
 
 @misc{webpage,
-author = {Lavanya Sajwan},
- title = {Why Do Programmers Do What They Do?
- Recruitment Webpage},
- year = 2020,
- url = {https://homepages.ecs.vuw.ac.nz/~sajwanlava/}
-}
+      title  = "Why Do Programmers Do What They Do?
+ Recruitment Webpage",
+      author = "Lavanya Sajwan",
+      howpublished={[Online]. Available: \url{https://homepages.ecs.vuw.ac.nz/~sajwanlava/}},
+      year   = "2020"
+    }
+
+
 
 @article{pilot,
 author = {Thabane, Lehana and Ma, Jinhui and Chu, Rong and Cheng, Ji and Ismaila, Afisi and Rios, Lorena P and Robson, Reid and Thabane, Marron and Giangregorio, Lora and Goldsmith, Charles H},
@@ -113,45 +116,113 @@ eprint = {https://pubmed.ncbi.nlm.nih.gov/20053272/?from_linkname=pubmed_pubmed_
 year = {2010}
 }
 
+
 @misc{aura,
-author = {Aura Information Security},
- title = {Cyber Security Market Research Report},
- year = 2019,
- notes = {Downloaded from the following url}
- url = {https://cdn2.hubspot.net/hubfs/2631546/Aura\%20Cyber\%20Security\%20Market\%20Research\%20Report\%20November\%202019.pdf?utm_campaign=Cyber\%20Security\%20\%7C\%20SOC\%20Awareness\%20Campaign&utm_source=hs_automation&utm_medium=email&utm_content=80067606&_hsenc=p2ANqtz-9JayH-azhNp_QgcTOhyETkFgn6CRyZzBiHyz851GrsxTvXpARmvV49rdiBo9GqKjLNelzQhmEgSQMDbdXea7JnV0Ha9w&_hsmi=80067606}
-}
+      title  = "Cyber Security Market Research Report",
+      author = "Aura Information Security",
+      howpublished={[Online]. Available: \url{https://www.kordia.co.nz/aura-cyber-security-market-research-2019}},
+      year   = "[Accessed May 25 2020]"
+    }
+
 
 @misc{securitystrat,
-author = {Department of the Prime Minister and Cabinet},
- title = {New Zealand’s
-cyber security
-strategy 2019},
- year = 2019,
- url = {https://dpmc.govt.nz/sites/default/files/2019-07/Cyber\%20Security\%20Strategy.pdf}
-}
+      title  = "New Zealand's cyber security strategy 2019",
+      author = "Department of the Prime Minister and Cabinet",
+      howpublished={[Online]. Available: \url{https://dpmc.govt.nz/sites/default/files/2019-07/Cyber\%20Security\%20Strategy.pdf}},
+      year   = "[Accessed May 25 2020]"
+    }
+
 
 @misc{owasp,
-author = {OWASP The Open Web Application Security Project},
- title = {OWASP Secure Coding Practices
-Quick Reference Guide},
- year = 2010,
- url = {https://owasp.org/www-pdf-archive/OWASP_SCP_Quick_Reference_Guide_v2.pdf}
-}
+      title  = "OWASP Secure Coding Practices",
+      author = "OWASP",
+      howpublished={[Online]. Available: \url{https://owasp.org/www-pdf-archive/OWASP_SCP_Quick_Reference_Guide_v2.pdf}},
+      year   = "[Accessed May 25 2020]"
+    }
+
+
 
 @misc{hepol,
-author = {VUW Human Ethics Committee},
- title = {Human Ethics Policy},
- year = 2019,
- url = {https://www.wgtn.ac.nz/documents/policy/research-policy/human-ethics-policy.pdf}
-}
+      title  = "Human Ethics Policy",
+      author = "VUW Human Ethics Committee",
+      howpublished={[Online]. Available: \url{https://www.wgtn.ac.nz/documents/policy/research-policy/human-ethics-policy.pdf}},
+      year   = "[Accessed May 22 2020]"
+    }
+
 
 @misc{childact,
-author = {Oranga Tamariki—Ministry for Children and the Ministry of Education},
- title = {Children’s Act 2014},
- year = 2018,
- url = {http://www.legislation.govt.nz/act/public/2014/0040/latest/DLM5501618.html?src=qs}
+      title  = "Children’s Act 2014",
+      author = "Oranga Tamariki—Ministry for Children and the Ministry of Education",
+      howpublished={[Online]. Available: \url{http://www.legislation.govt.nz/act/public/2014/0040/latest/DLM5501618.html?src=qs}},
+      year   = "[Accessed May 22 2020]"
+    }
+    
+@misc{healthpol,
+      title  = "Update on Tū Ora Cyber Security Incident at 8 October 2019",
+      author = "Ministry of Health",
+      howpublished={[Online]. Available: \url{https://www.health.govt.nz/system/files/documents/pages/health_report_8_october_20191935_redacted.pdf}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+@misc{incident,
+      title  = "Cyber security incident",
+      author = "Ministry of Health",
+      howpublished={[Online]. Available: \url{https://www.health.govt.nz/our-work/emergency-management/cyber-security-incident}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+@inbook{nathan,
+author = {Newton, Nathan and Anslow, Craig and Drechsler, Andreas},
+year = {2019},
+month = {06},
+pages = {8-14},
+title = {INFORMATION SECURITY IN AGILE SOFTWARE DEVELOPMENT PROJECTS: A CRITICAL SUCCESS FACTOR PERSPECTIVE},
+isbn = {978-1-7336325-0-8}
 }
 
+@misc{infer,
+      title  = "A tool to detect bugs in Java and C/C++/Objective-C code before it ships",
+      author = "Facebook, Inc",
+      howpublished={[Online]. Available: \url{https://fbinfer.com/}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+@inproceedings{tri,
+title	= {Tricorder: Building a Program Analysis Ecosystem},
+author	= {Caitlin Sadowski and Jeffrey van Gogh and Ciera Jaspan and Emma Soederberg and Collin Winter},
+year	= {2015},
+booktitle	= {International Conference on Software Engineering (ICSE)}
+}
 
-
+@misc{coverity,
+      title  = "COVERITY SCAN STATIC ANALYSIS",
+      author = "Synopsys, Inc",
+      howpublished={[Online]. Available: \url{https://scan.coverity.com/}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+    
+@misc{raygun,
+      title  = "Raygun",
+      author = "Raygun",
+      howpublished={[Online]. Available: \url{https://raygun.com/}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+@misc{alumni,
+      title  = "Alumni",
+      author = "SPG",
+      howpublished={[Online]. Available: \url{https://ecs.wgtn.ac.nz/Groups/SPG/Alumni}},
+      year   = "[Accessed May 31 2020]"
+    }
+    
+@inproceedings{pang,
+author = {Pang, Aaron and Anslow, Craig and Noble, James},
+year = {2018},
+month = {10},
+pages = {239-247},
+title = {What Programming Languages Do Developers Use? A Theory of Static vs Dynamic Language Choice},
+booktitle = "Conference: 2018 IEEE Symposium on Visual Languages and Human-Centric Computing (VL/HCC)"
+doi = {10.1109/VLHCC.2018.8506534}
+}
 
