--- a/reports/prelim/latex/proj_report_outline.tex
+++ b/reports/prelim/latex/proj_report_outline.tex
@@ -32,7 +32,7 @@
 
 %% These are standard LaTeX definitions for the document
 %%                            
-\title{Why Do Programmers Do What They Do?}
+\title{Why Do Programmers Do What They Do? \protect\\ A Theory on Influences on Security Practices}
 \author{Lavanya Sajwan}
 
 %% This file can be used for creating a wide range of reports
@@ -76,7 +76,7 @@
 
 \begin{abstract}
 
-Technologies are continually adapting to match ever-changing trends, and as this occurs, new vulnerabilities are exploited by malignant attackers and can cause significant economic damage to companies. Programmers are therefore repeatedly having to expand knowledge and skills to protect software. We must understand the thinking behind the decisions and influences of programmers to interpret how they implement and adopt security practices. This preliminary report will cover the current progress of the project "Why Do Programmers Do What They Do?"
+Technologies are continually adapting to match ever-changing trends, and as this occurs, new vulnerabilities are exploited by malignant attackers and can cause significant economic damage to companies. Programmers are therefore repeatedly having to expand knowledge and skills to protect software. Programmers do make mistakes and this is why we must understand the thinking behind the decisions and influences of programmers to interpret how they implement and adopt security practices. Understanding these decisions can help inform design decisions around improving programming language security. This preliminary report will cover the current progress of the project "Why Do Programmers Do What They Do?"
 
 \end{abstract}
 
@@ -117,6 +117,8 @@ Technologies are continually adapting to match ever-changing trends, and as this
 
 % appendix
 \appendix
+\chapter{Proposal}
+\input{appendix/proposal}
 \chapter{Application}
 \input{appendix/application}
 \chapter{Participant Information Sheet}
@@ -129,6 +131,8 @@ Technologies are continually adapting to match ever-changing trends, and as this
 \input{appendix/post}
 \chapter{Recruitment Webpage}
 \input{appendix/webpage}
+\chapter{Initial Interview Questions}
+\input{appendix/pilot1}
 
 
 \end{document}
