--- a/reports/prelim/latex/4-future.tex
+++ b/reports/prelim/latex/4-future.tex
@@ -15,7 +15,7 @@
 \par Analysis will occur after each interview. This process will use open coding to analyse key points from the interview transcript \cite{geeks}. Open coding is the process of keeping the mind free from any biases when sorting information. This means any assumptions should be ignored and ideas can only form from the data collected. This part of the remaining work is expected to take the longest. When concepts are identified these can influence the iterative nature of the interview and allow for the following interview to perhaps have different questions, target towards the found concepts. After the interviews and their following analysis, the core categories are found and then the theory can be presented in the final report and presentation. 
 \newline
 \par 
-There are limitations to evaluating the solution as the project does not produce a technical artefact. Pertaining to the method; there are two significant areas of evaluation that can be taken. These are the evaluation of the research process and theory and will occur after the generation of the final theory. By evaluating these two areas, it can be examined whether correct procedures have taken place, and determine whether project goals have been met.
+There are limitations to evaluating the solution as the project does not produce a technical artefact. Pertaining to the method; there are two significant areas of evaluation that can be taken. These are the evaluation of the research process and theory and will occur after the generation of the final theory. By evaluating these two areas, it can be examined whether correct procedures have taken place, and determine whether project goals have been met. Past researchers; Aaron Pang, Nathan Newton and Brendan Julian, have evaluated their grounded theory research by either one of those areas or both \cite{nathan,2,pang}. 
  
 \section{Proposed Timeline}
 
@@ -28,7 +28,9 @@ Above shows the Gantt chart which was outlined during the submission of the prop
 \includegraphics[width=\textwidth]{figures/fig2.png}
 \newline
 \newline
-The above shows the now amended timeline. Not much has changed as I am following the proposed timeline quite closely. There have been additions of a pilot study which ran across weeks 6 and 7. There are still details awaiting regarding the examination period in semester two so the “EXAM” columns are amended to being week columns. The initial analysis stage of this research has also been pulled back to starting alongside the interview process as analysis will ideally occur after each interview. The entire timeline is dependent on whether the human ethics application obtains approval by the end of week 10. if this does not occur, the entire timeline will have to shift back and tasks may have to be condensed.
+The above shows the now amended timeline. Not much has changed as I am following the proposed timeline quite closely. There have been additions of a pilot study which ran across weeks 6 and 7. There are still details awaiting regarding the examination period in semester two so the “EXAM” columns are amended to being week columns. The initial analysis stage of this research has also been pulled back to starting alongside the interview process as analysis will ideally occur after each interview. Similarly, the theoretical notes will start to be written during the interview and analysis parts. The interview process has also been lengthened to allow for at least one interview a week in order to ensure that thorough analysis can take place and appropriate iteration of questions.
+\newline
+\par The entire timeline is dependent on whether the human ethics application obtains approval by the end of trimester one.  If this does not occur, the entire timeline will have to shift back and tasks may have to be condensed.
 
 
 
